<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.catatankeuangan.MainActivity">
    <item
        android:id="@+id/action_outcome"
        android:title="@string/action_outcome"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_income"
        android:title="@string/action_income"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_all"
        android:title="@string/action_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
