<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:isScrollContainer="true"
    android:padding="16dp"
    tools:context=".CreateCatatanActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/save">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="end"
                android:hint="@string/input_amount"
                android:inputType="numberDecimal"
                android:textSize="@dimen/size_text_input_lg" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_type_come"
                android:labelFor="@id/typeCome"/>

            <RadioGroup
                android:id="@+id/typeCome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@+id/outcome"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/outcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_outcome"
                    android:textSize="@dimen/size_text_input_sm"
                    tools:text="@string/label_outcome" />

                <RadioButton
                    android:id="@+id/income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_income"
                    android:textSize="@dimen/size_text_input_sm"
                    tools:text="@string/label_income" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/date"
                    android:text="@string/label_date" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:labelFor="@id/date"
                    android:text="@string/label_date"
                    android:textSize="@dimen/size_text_input_md" />

            </LinearLayout>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/input_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:scrollbars="vertical"
                android:textSize="@dimen/size_text_input_md" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_check_black_24dp"
        android:drawableStart="@drawable/ic_check_black_24dp"
        android:gravity="start"
        android:text="@string/button_save" />

</RelativeLayout>